[package]
name = "sensor-api"
version = "0.1.0"
authors = ["scullionw <scuw1801@usherbrooke.ca>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
lazy_static = "1.2"
rand = "0.6"

[profile.release]
lto = true
codegen-units = 1